--- a/public/form.html
+++ b/public/form.html
@@ -8,11 +8,12 @@
 <body>
   <!-- This file is used by Netlify to detect the form structure during build time -->
   <!-- It's not meant to be accessed directly by users -->
-  <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+   <noscript>
+  <form name="contact" netlify hidden>
     <input type="text" name="name" />
     <input type="email" name="email" />
-    <textarea name="message"></textarea>
-    <input type="hidden" name="h-captcha-response" />
-  </form> -->
+    <textarea name="message" />
+  </form>
+</noscript>
 </body>
 </html>
