--- a/public/__forms.html
+++ b/public/__forms.html
@@ -10,11 +10,13 @@
 <body>
   <!-- This file is used by Netlify to detect the form structure during build time -->
   <!-- It's not meant to be accessed directly by users -->
-  <form name="contact" data-netlify="true" hidden>
+  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" data-netlify-recaptcha="true" hidden>
     <input type="hidden" name="form-name" value="contact" />
+    <input name="bot-field" />
     <input type="text" name="name" />
     <input type="email" name="email" />
-    <textarea name="message" />
+    <textarea name="message"></textarea>
+    <div data-netlify-recaptcha="true"></div>
   </form>
 </body>
 
