--- a/public/__forms.html
+++ b/public/__forms.html
@@ -10,7 +10,7 @@
 <body>
   <!-- This file is used by Netlify to detect the form structure during build time -->
   <!-- It's not meant to be accessed directly by users -->
-  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" data-netlify-recaptcha="true" hidden>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="hidden" name="form-name" value="contact" />
     <input name="bot-field" />
     <input type="text" name="name" />
